# pufferlax

./: .gitmodules  README.md  build_ffi.py  pyproject.toml
examples/: ppo.py  ppo_breakout.py  rollout.py  scan_rollout.py
pufferlax/: __init__.py  build_ffi.py  environment.py  ffi.cu  ppo.py
pufferlax/ffi/: build.sh  ffi.cu  puffer_ffi.cu
